--- a/src/main/resources/fxml/Editor.fxml
+++ b/src/main/resources/fxml/Editor.fxml
@@ -29,6 +29,7 @@
                     <CheckMenuItem fx:id="menuAutoSave" text="Auto Save"/>
                     <SeparatorMenuItem/>
                     <MenuItem fx:id="menuExport" text="Export Project" accelerator="Ctrl+E"/>
+                    <MenuItem fx:id="menuOpenProjectFolder" text="Open Project Folder"/>
                     <SeparatorMenuItem/>
                     <MenuItem fx:id="menuClose" text="Close Project" accelerator="Ctrl+W"/>
                 </Menu>
@@ -168,76 +169,9 @@
     
     <!-- Center: Main IDE Area -->
     <center>
-        <StackPane>
-            <!-- Easy Mode View -->
-            <BorderPane fx:id="uiEzModeView" visible="false" styleClass="ide-root" style="-fx-background-color: #1e1e1e;">
-                 <top>
-                     <VBox spacing="20" style="-fx-padding: 20;">
-                         <!-- Header -->
-                         <HBox alignment="CENTER_LEFT" spacing="20">
-                             <Label text="Easy Mode" textFill="WHITE">
-                                 <font>
-                                     <Font name="System Bold" size="24"/>
-                                 </font>
-                             </Label>
-                         </HBox>
-        
-                         <!-- Navigation -->
-                         <HBox spacing="10" alignment="CENTER_LEFT">
-                             <ToggleButton fx:id="btnEzEntities" text="Entities" selected="true" styleClass="button-primary"/>
-                             <ToggleButton fx:id="btnEzItems" text="Items" styleClass="button-primary"/>
-                             <ToggleButton fx:id="btnEzBlocks" text="Blocks" styleClass="button-primary"/>
-                         </HBox>
-                     </VBox>
-                 </top>
-                 
-                 <center>
-                     <SplitPane dividerPositions="0.25" style="-fx-background-color: transparent; -fx-padding: 0 20 20 20;">
-                          <!-- Left: Selection Lists -->
-                          <StackPane>
-                              <!-- Entities -->
-                              <VBox fx:id="ezEntitiesContainer" visible="true" spacing="10" style="-fx-background-color: #252526; -fx-padding: 10; -fx-background-radius: 5;">
-                                  <Label text="Entities" textFill="WHITE" style="-fx-font-weight: bold; -fx-font-size: 16;"/>
-                                  <ListView fx:id="ezEntitiesList" VBox.vgrow="ALWAYS" styleClass="file-tree"/>
-                              </VBox>
-         
-                              <!-- Items -->
-                              <VBox fx:id="ezItemsContainer" visible="false" spacing="10" style="-fx-background-color: #252526; -fx-padding: 10; -fx-background-radius: 5;">
-                                  <Label text="Items" textFill="WHITE" style="-fx-font-weight: bold; -fx-font-size: 16;"/>
-                                  <ListView fx:id="ezItemsList" VBox.vgrow="ALWAYS" styleClass="file-tree"/>
-                              </VBox>
-         
-                              <!-- Blocks -->
-                              <VBox fx:id="ezBlocksContainer" visible="false" spacing="10" style="-fx-background-color: #252526; -fx-padding: 10; -fx-background-radius: 5;">
-                                  <Label text="Blocks" textFill="WHITE" style="-fx-font-weight: bold; -fx-font-size: 16;"/>
-                                  <ListView fx:id="ezBlocksList" VBox.vgrow="ALWAYS" styleClass="file-tree"/>
-                              </VBox>
-                          </StackPane>
-        
-                          <!-- Right: Visual Workspace -->
-                          <BorderPane style="-fx-background-color: #1e1e1e;">
-                               <left>
-                                    <VBox spacing="10" style="-fx-background-color: #252526; -fx-padding: 10; -fx-border-color: #333; -fx-border-width: 0 1 0 0;">
-                                         <Label text="Logic Blocks" textFill="WHITE" style="-fx-font-weight: bold;"/>
-                                         <ScrollPane fitToWidth="true" hbarPolicy="NEVER" style="-fx-background: transparent; -fx-background-color: transparent;">
-                                              <VBox fx:id="ezLogicPalette" spacing="10" style="-fx-background-color: transparent;"/>
-                                         </ScrollPane>
-                                    </VBox>
-                               </left>
-                               <center>
-                                    <ScrollPane style="-fx-background: #1e1e1e; -fx-background-color: #1e1e1e;">
-                                         <Pane fx:id="ezCanvas" prefWidth="2000" prefHeight="2000" style="-fx-background-color: #1e1e1e;"/>
-                                    </ScrollPane>
-                               </center>
-                          </BorderPane>
-                     </SplitPane>
-                 </center>
-            </BorderPane>
-
-            <!-- Original SplitPane (Code Mode) -->
-            <SplitPane fx:id="ideSplitPane" dividerPositions="0.15" styleClass="ide-splitpane">
+        <SplitPane fx:id="ideSplitPane" dividerPositions="0.2" styleClass="ide-splitpane" style="-fx-background-color: #1e1e1e; -fx-padding: 0;">
             
-            <!-- Left: Sidebar Container -->
+            <!-- Left: Sidebar Container (Shared) -->
             <StackPane fx:id="sidebarContainer" minWidth="150">
                 <!-- Project Explorer View -->
                 <VBox fx:id="projectExplorerView" styleClass="ide-sidebar" spacing="5">
@@ -382,24 +316,150 @@
                 </VBox>
             </StackPane>
             
-            <!-- Right: Code Editor Area -->
-            <BorderPane styleClass="editor-area">
-                
-                <!-- Center: Code Editor with Tabs -->
-                <center>
-                    <VBox>
-                        <!-- File Tabs -->
-                        <TabPane fx:id="editorTabs" styleClass="editor-tabs" 
-                                VBox.vgrow="ALWAYS">
-                            <!-- Tabs will be added dynamically -->
-                        </TabPane>
-                    </VBox>
-                </center>
-                
-            </BorderPane>
+            <!-- Right: Content Area (Swappable) -->
+            <StackPane fx:id="contentArea" style="-fx-background-color: #1e1e1e;">
+                <!-- Code Mode View (Default) -->
+                <BorderPane fx:id="codeModeView" styleClass="editor-area">
+                    <center>
+                        <VBox>
+                            <TabPane fx:id="editorTabs" styleClass="editor-tabs" VBox.vgrow="ALWAYS"/>
+                        </VBox>
+                    </center>
+                </BorderPane>
+
+                <!-- Easy Mode View -->
+                <BorderPane fx:id="uiEzModeView" visible="false" styleClass="ide-root" style="-fx-background-color: #1e1e1e;">
+                     <top>
+                         <VBox fx:id="ezTopBar" spacing="20" style="-fx-padding: 20;">
+                             <!-- Header -->
+                             <HBox alignment="CENTER_LEFT" spacing="20">
+                                 <Label text="Easy Mode" textFill="WHITE">
+                                     <font>
+                                         <Font name="System Bold" size="24"/>
+                                     </font>
+                                 </Label>
+                             </HBox>
             
-            </SplitPane>
-        </StackPane>
+                             <!-- Navigation -->
+                             <HBox spacing="10" alignment="CENTER_LEFT">
+                                 <ToggleButton fx:id="btnEzMain" text="Elements Addon" selected="true" styleClass="button-primary">
+                                     <graphic>
+                                         <SVGPath content="M20.5 11H19V7c0-1.1-.9-2-2-2h-4V3.5C13 2.12 11.88 1 10.5 1S8 2.12 8 3.5V5H4c-1.1 0-1.99.9-1.99 2v3.8H3.5c1.38 0 2.5 1.12 2.5 2.5s-1.12 2.5-2.5 2.5H2v2c0 1.1.9 2 2 2h3.8v-1.5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5V22h4c1.1 0 2-.9 2-2v-3.8h1.5c1.38 0 2.5-1.12 2.5-2.5s-1.12-2.5-2.5-2.5z" style="-fx-fill: white;" scaleX="0.8" scaleY="0.8"/>
+                                     </graphic>
+                                 </ToggleButton>
+                                 <ToggleButton fx:id="btnEzEntities" text="Entidades" styleClass="button-primary">
+                                     <graphic>
+                                         <SVGPath content="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z" style="-fx-fill: white;" scaleX="0.8" scaleY="0.8"/>
+                                     </graphic>
+                                 </ToggleButton>
+                                 <ToggleButton fx:id="btnEzItems" text="Items" styleClass="button-primary">
+                                     <graphic>
+                                         <SVGPath content="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" style="-fx-fill: white;" scaleX="0.8" scaleY="0.8"/>
+                                     </graphic>
+                                 </ToggleButton>
+                                 <ToggleButton fx:id="btnEzBlocks" text="Bloques" styleClass="button-primary">
+                                     <graphic>
+                                         <SVGPath content="M4 11h5V5H4v6zm0 7h5v-6H4v6zm6 0h5v-6h-5v6zm6 0h5v-6h-5v6zm-6-7h5V5h-5v6zm6-6v6h5V5h-5z" style="-fx-fill: white;" scaleX="0.8" scaleY="0.8"/>
+                                     </graphic>
+                                 </ToggleButton>
+                                 <ToggleButton fx:id="btnEzTextures" text="Texturas" styleClass="button-primary">
+                                     <graphic>
+                                         <SVGPath content="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z" style="-fx-fill: white;" scaleX="0.8" scaleY="0.8"/>
+                                     </graphic>
+                                 </ToggleButton>
+                                 <ToggleButton fx:id="btnEzModels" text="Modelos 3D" styleClass="button-primary">
+                                     <graphic>
+                                         <SVGPath content="M21 16.5c0 .38-.21.71-.53.88l-7.9 4.44c-.16.12-.36.18-.57.18-.21 0-.41-.06-.57-.18l-7.9-4.44A.991.991 0 0 1 3 16.5v-9c0-.38.21-.71.53-.88l7.9-4.44c.16-.12.36-.18.57-.18.21 0 .41.06.57.18l7.9 4.44c.32.17.53.5.53.88v9zM12 4.15L6.04 7.5 12 10.85l5.96-3.35L12 4.15zM5 15.91l6 3.38v-6.71L5 9.21v6.7zM13 19.29l6-3.38v-6.7l-6 3.38v6.7z" style="-fx-fill: white;" scaleX="0.8" scaleY="0.8"/>
+                                     </graphic>
+                                 </ToggleButton>
+                                 <ToggleButton fx:id="btnEzSounds" text="Sonidos" styleClass="button-primary">
+                                     <graphic>
+                                         <SVGPath content="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z" style="-fx-fill: white;" scaleX="0.8" scaleY="0.8"/>
+                                     </graphic>
+                                 </ToggleButton>
+                                 
+                                 <Region HBox.hgrow="ALWAYS" />
+                                 
+                                 <HBox alignment="CENTER_LEFT" style="-fx-background-color: #333; -fx-background-radius: 15; -fx-padding: 0 10;">
+                                     <SVGPath content="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z" style="-fx-fill: #aaa;" scaleX="0.7" scaleY="0.7"/>
+                                     <TextField fx:id="txtEzFilter" promptText="Buscar..." style="-fx-background-color: transparent; -fx-text-fill: white; -fx-prompt-text-fill: #888;" prefWidth="200"/>
+                                 </HBox>
+                             </HBox>
+                         </VBox>
+                     </top>
+                     
+                     <center>
+                         <StackPane style="-fx-padding: 0 20 20 20;">
+                              <!-- Main Elements View -->
+                              <VBox fx:id="ezMainContainer" visible="true" spacing="10">
+                                   <Label text="Elements Addon" textFill="WHITE" style="-fx-font-weight: bold; -fx-font-size: 16;"/>
+                                   <ScrollPane fitToWidth="true" style="-fx-background-color: transparent; -fx-background: transparent;" VBox.vgrow="ALWAYS">
+                                       <FlowPane fx:id="mainElementsFlowPane" hgap="10" vgap="10" style="-fx-background-color: transparent;"/>
+                                   </ScrollPane>
+                              </VBox>
+
+                              <!-- Entities View -->
+                              <VBox fx:id="ezEntitiesContainer" visible="false" spacing="10">
+                                   <Label text="Entidades" textFill="WHITE" style="-fx-font-weight: bold; -fx-font-size: 16;"/>
+                                   <ScrollPane fitToWidth="true" style="-fx-background-color: transparent; -fx-background: transparent;" VBox.vgrow="ALWAYS">
+                                       <FlowPane fx:id="entitiesFlowPane" hgap="10" vgap="10" style="-fx-background-color: transparent;"/>
+                                   </ScrollPane>
+                              </VBox>
+    
+                              <!-- Items View -->
+                              <VBox fx:id="ezItemsContainer" visible="false" spacing="10">
+                                   <Label text="Items" textFill="WHITE" style="-fx-font-weight: bold; -fx-font-size: 16;"/>
+                                   <ScrollPane fitToWidth="true" style="-fx-background-color: transparent; -fx-background: transparent;" VBox.vgrow="ALWAYS">
+                                       <FlowPane fx:id="itemsFlowPane" hgap="10" vgap="10" style="-fx-background-color: transparent;"/>
+                                   </ScrollPane>
+                              </VBox>
+    
+                              <!-- Blocks View -->
+                              <VBox fx:id="ezBlocksContainer" visible="false" spacing="10">
+                                   <Label text="Bloques" textFill="WHITE" style="-fx-font-weight: bold; -fx-font-size: 16;"/>
+                                   <ScrollPane fitToWidth="true" style="-fx-background-color: transparent; -fx-background: transparent;" VBox.vgrow="ALWAYS">
+                                       <FlowPane fx:id="blocksFlowPane" hgap="10" vgap="10" style="-fx-background-color: transparent;"/>
+                                   </ScrollPane>
+                              </VBox>
+    
+                              <!-- Textures View -->
+                              <VBox fx:id="ezTexturesContainer" visible="false" spacing="10">
+                                   <Label text="Texturas" textFill="WHITE" style="-fx-font-weight: bold; -fx-font-size: 16;"/>
+
+                                   <ScrollPane fitToWidth="true" style="-fx-background-color: transparent; -fx-background: transparent;" VBox.vgrow="ALWAYS">
+                                       <FlowPane fx:id="texturesFlowPane" hgap="10" vgap="10" style="-fx-background-color: transparent;"/>
+                                   </ScrollPane>
+                              </VBox>
+    
+                              <!-- Models View -->
+                              <VBox fx:id="ezModelsContainer" visible="false" spacing="10">
+                                   <Label text="Modelos 3D" textFill="WHITE" style="-fx-font-weight: bold; -fx-font-size: 16;"/>
+                                   <ScrollPane fitToWidth="true" style="-fx-background-color: transparent; -fx-background: transparent;" VBox.vgrow="ALWAYS">
+                                       <FlowPane fx:id="modelsFlowPane" hgap="10" vgap="10" style="-fx-background-color: transparent;"/>
+                                   </ScrollPane>
+                              </VBox>
+    
+                              <!-- Sounds View -->
+                              <VBox fx:id="ezSoundsContainer" visible="false" spacing="10">
+                                   <Label text="Sonidos" textFill="WHITE" style="-fx-font-weight: bold; -fx-font-size: 16;"/>
+                                   <ScrollPane fitToWidth="true" style="-fx-background-color: transparent; -fx-background: transparent;" VBox.vgrow="ALWAYS">
+                                       <FlowPane fx:id="soundsFlowPane" hgap="10" vgap="10" style="-fx-background-color: transparent;"/>
+                                   </ScrollPane>
+                              </VBox>
+
+                              <!-- Pixel Art View (Ez Mode) -->
+                              <VBox fx:id="ezPixelArtContainer" visible="false" spacing="10">
+                                  <HBox alignment="CENTER_LEFT" spacing="10">
+                                      <Button fx:id="btnEzBackFromPixelArt" text="← Volver" styleClass="button-primary"/>
+                                      <Label text="Editor de Pixel Art" textFill="WHITE" style="-fx-font-weight: bold; -fx-font-size: 16;"/>
+                                  </HBox>
+                                  <StackPane fx:id="ezPixelArtContent" VBox.vgrow="ALWAYS" style="-fx-background-color: #1e1e1e; -fx-border-color: #3e3e3e; -fx-border-width: 1;"/>
+                              </VBox>
+                         </StackPane>
+                     </center>
+                </BorderPane>
+            </StackPane>
+        </SplitPane>
     </center>
     
     <!-- Bottom: Collapsible Console and Status Bar -->
